--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,10 +56,10 @@
 
       {{ content }}
 
-      </section>
-      <footer>
+      {% </section> %}
+      {% <footer> %}
         {%- include footer.html -%}
-      </footer>
+      {% </footer> %}
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
   </body>
