--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
 
       <!–– 
       </section>
-      <footer> %}
+      <footer>
         {%- include footer.html -%}
       </footer>
       ––>
